{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 57,
  "lineage": "86398d51-4034-7e10-c303-b159bddbb4ec",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-03502c1e03438754d",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-13-124-221-117.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.221.117",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eks_test_ngw_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ba348d1c903e5d48",
            "arn": "arn:aws:ec2:ap-northeast-2:525759056232:instance/i-0de4911b81f145b52",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdb",
                "encrypted": false,
                "iops": 100,
                "snapshot_id": "snap-0ba515decf1781f5b",
                "throughput": 0,
                "volume_id": "vol-0465fa7b1d906ba18",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "instance_4_control_profile",
            "id": "i-0de4911b81f145b52",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-terraform-test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-035587bd1a0fbe20f",
            "private_dns": "ip-192-168-1-83.ap-northeast-2.compute.internal",
            "private_ip": "192.168.1.83",
            "public_dns": "ec2-3-36-91-51.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.91.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c0c2576f0ba8a42e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0884e2660b8e82c66",
            "tags": {
              "Name": "bastion_host_4_eks"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bb2c8242716da955"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.hello",
            "aws_iam_role.iam_role",
            "aws_security_group.bastion_sg",
            "aws_subnet.eks_pub_subnet",
            "aws_vpc.eks_test_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_test_igw2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525759056232:internet-gateway/igw-051692813d50767b3",
            "id": "igw-051692813d50767b3",
            "owner_id": "525759056232",
            "tags": {
              "Name": "eks_test_igw2"
            },
            "vpc_id": "vpc-0281532b63d3f746e"
          },
          "dependencies": [
            "aws_vpc.eks_test_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "eks_test_ngw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03502c1e03438754d",
            "id": "nat-04409805437cea7e8",
            "network_interface_id": "eni-0b363ac758919a41f",
            "private_ip": "192.168.1.42",
            "public_ip": "13.124.221.117",
            "subnet_id": "subnet-0884e2660b8e82c66",
            "tags": {
              "Name": "eks_test_ngw"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.eks_pub_subnet",
            "aws_vpc.eks_test_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ngw2",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-021e1c14f27cd605f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04409805437cea7e8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-021e1c14f27cd605f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.eks_test_ngw",
            "aws_route_table.eks_test_pri_route2",
            "aws_subnet.eks_pub_subnet",
            "aws_vpc.eks_test_vpc2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bfa91702af9bf0981080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04409805437cea7e8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bfa91702af9bf098",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.eks_test_ngw",
            "aws_route_table.eks_test_pri_route2",
            "aws_subnet.eks_pub_subnet",
            "aws_vpc.eks_test_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw2",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-051692813d50767b3",
            "id": "r-rtb-030c4ed5dc8453ac01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-030c4ed5dc8453ac0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.eks_test_igw2",
            "aws_route_table.eks_test_pub_route2",
            "aws_vpc.eks_test_vpc2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-051692813d50767b3",
            "id": "r-rtb-01045766b3050d9f01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01045766b3050d9f0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.eks_test_igw2",
            "aws_route_table.eks_test_pub_route2",
            "aws_vpc.eks_test_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_test_pri_route2",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525759056232:route-table/rtb-021e1c14f27cd605f",
            "id": "rtb-021e1c14f27cd605f",
            "owner_id": "525759056232",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks_test_pri_ap-northeast-2a_route2"
            },
            "vpc_id": "vpc-0281532b63d3f746e"
          },
          "dependencies": [
            "aws_vpc.eks_test_vpc2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525759056232:route-table/rtb-0bfa91702af9bf098",
            "id": "rtb-0bfa91702af9bf098",
            "owner_id": "525759056232",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "eks_test_pri_ap-northeast-2c_route2"
            },
            "vpc_id": "vpc-0281532b63d3f746e"
          },
          "dependencies": [
            "aws_vpc.eks_test_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_test_pub_route2",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525759056232:route-table/rtb-030c4ed5dc8453ac0",
            "id": "rtb-030c4ed5dc8453ac0",
            "owner_id": "525759056232",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0281532b63d3f746e"
          },
          "dependencies": [
            "aws_vpc.eks_test_vpc2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525759056232:route-table/rtb-01045766b3050d9f0",
            "id": "rtb-01045766b3050d9f0",
            "owner_id": "525759056232",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0281532b63d3f746e"
          },
          "dependencies": [
            "aws_vpc.eks_test_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_1",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003edba4a7cb4c783",
            "route_table_id": "rtb-030c4ed5dc8453ac0",
            "subnet_id": "subnet-0884e2660b8e82c66"
          },
          "dependencies": [
            "aws_route_table.eks_test_pub_route2",
            "aws_subnet.eks_pub_subnet",
            "aws_vpc.eks_test_vpc2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5cc32e64065a5a9",
            "route_table_id": "rtb-01045766b3050d9f0",
            "subnet_id": "subnet-0ffee7ed2efb52ac6"
          },
          "dependencies": [
            "aws_route_table.eks_test_pub_route2",
            "aws_subnet.eks_pub_subnet",
            "aws_vpc.eks_test_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_2",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c99efd26afd73de",
            "route_table_id": "rtb-021e1c14f27cd605f",
            "subnet_id": "subnet-096d45278bb1d8d6a"
          },
          "dependencies": [
            "aws_route_table.eks_test_pri_route2",
            "aws_subnet.eks_pri_subnet",
            "aws_vpc.eks_test_vpc2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008335a5507a24caa",
            "route_table_id": "rtb-0bfa91702af9bf098",
            "subnet_id": "subnet-0817bf497dee736fd"
          },
          "dependencies": [
            "aws_route_table.eks_test_pri_route2",
            "aws_subnet.eks_pri_subnet",
            "aws_vpc.eks_test_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525759056232:security-group/sg-0bb2c8242716da955",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb2c8242716da955",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion",
            "name_prefix": "",
            "owner_id": "525759056232",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EKS-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0281532b63d3f746e"
          },
          "dependencies": [
            "aws_vpc.eks_test_vpc2"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525759056232:security-group/sg-01f62cc51800c5a82",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-01f62cc51800c5a82",
            "ingress": [],
            "name": "eks-terraform-jong20210603053448133900000007",
            "name_prefix": "eks-terraform-jong",
            "owner_id": "525759056232",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-terraform-jong-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0281532b63d3f746e"
          },
          "dependencies": [
            "aws_vpc.eks_test_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_test_sg_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525759056232:security-group/sg-0f6baa9b120ce2ef7",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f6baa9b120ce2ef7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/8"
                ],
                "description": "value",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20210603053447639600000005",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "525759056232",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_4_worker_group_mgmt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0281532b63d3f746e"
          },
          "dependencies": [
            "aws_vpc.eks_test_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_server_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525759056232:security-group/sg-0152dccc7f03174c4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0152dccc7f03174c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins_server_security_group",
            "name_prefix": "",
            "owner_id": "525759056232",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Jenkins_server_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0281532b63d3f746e"
          },
          "dependencies": [
            "aws_vpc.eks_test_vpc2"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525759056232:security-group/sg-05d3d118a89f975d0",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-05d3d118a89f975d0",
            "ingress": [],
            "name": "eks-terraform-jong20210603053447961300000006",
            "name_prefix": "eks-terraform-jong",
            "owner_id": "525759056232",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-terraform-jong-eks_worker_sg",
              "kubernetes.io/cluster/eks-terraform-jong": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0281532b63d3f746e"
          },
          "dependencies": [
            "aws_vpc.eks_test_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_host_access",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow bastion host to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-681816086",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01f62cc51800c5a82",
            "self": false,
            "source_security_group_id": "sg-0bb2c8242716da955",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.eks_test_vpc2",
            "module.eks.aws_security_group.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_host_access_to_jenkins_server",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow jenkins server to communicate with the bastion host only",
            "from_port": 443,
            "id": "sgrule-1156965989",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bb2c8242716da955",
            "self": false,
            "source_security_group_id": "sg-0152dccc7f03174c4",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.jenkins_server_sg",
            "aws_vpc.eks_test_vpc2"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-328542763",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01f62cc51800c5a82",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_vpc.eks_test_vpc2",
            "module.eks.aws_security_group.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-262075456",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01f62cc51800c5a82",
            "self": false,
            "source_security_group_id": "sg-05d3d118a89f975d0",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_vpc.eks_test_vpc2",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_primary_ingress_workers",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_private_access",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-1424468519",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05d3d118a89f975d0",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_vpc.eks_test_vpc2",
            "module.eks.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-112077389",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05d3d118a89f975d0",
            "self": false,
            "source_security_group_id": "sg-01f62cc51800c5a82",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_vpc.eks_test_vpc2",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-548551540",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05d3d118a89f975d0",
            "self": false,
            "source_security_group_id": "sg-01f62cc51800c5a82",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_vpc.eks_test_vpc2",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_kubelet",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_primary",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-1222493533",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05d3d118a89f975d0",
            "self": false,
            "source_security_group_id": "sg-05d3d118a89f975d0",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_vpc.eks_test_vpc2",
            "module.eks.aws_security_group.workers"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_pri_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525759056232:subnet/subnet-096d45278bb1d8d6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.10.0/24",
            "id": "subnet-096d45278bb1d8d6a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "525759056232",
            "tags": {
              "Name": "eks_pri_subnet_0",
              "kubernetes.io/cluster/eks-terraform-jong": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks_pri_subnet_0",
              "kubernetes.io/cluster/eks-terraform-jong": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0281532b63d3f746e"
          },
          "dependencies": [
            "aws_vpc.eks_test_vpc2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525759056232:subnet/subnet-0817bf497dee736fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.11.0/24",
            "id": "subnet-0817bf497dee736fd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "525759056232",
            "tags": {
              "Name": "eks_pri_subnet_1",
              "kubernetes.io/cluster/eks-terraform-jong": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks_pri_subnet_1",
              "kubernetes.io/cluster/eks-terraform-jong": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0281532b63d3f746e"
          },
          "dependencies": [
            "aws_vpc.eks_test_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_pub_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525759056232:subnet/subnet-0884e2660b8e82c66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0884e2660b8e82c66",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "525759056232",
            "tags": {
              "Name": "eks_pub_subnet_0",
              "kubernetes.io/cluster/eks-terraform-jong": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks_pub_subnet_0",
              "kubernetes.io/cluster/eks-terraform-jong": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0281532b63d3f746e"
          },
          "dependencies": [
            "aws_vpc.eks_test_vpc2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525759056232:subnet/subnet-0ffee7ed2efb52ac6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0ffee7ed2efb52ac6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "525759056232",
            "tags": {
              "Name": "eks_pub_subnet_1",
              "kubernetes.io/cluster/eks-terraform-jong": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks_pub_subnet_1",
              "kubernetes.io/cluster/eks-terraform-jong": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0281532b63d3f746e"
          },
          "dependencies": [
            "aws_vpc.eks_test_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_test_vpc2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:525759056232:vpc/vpc-0281532b63d3f746e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-02e27101c7446bb1c",
            "default_route_table_id": "rtb-0c9be62dad94d00f0",
            "default_security_group_id": "sg-06011164842407a53",
            "dhcp_options_id": "dopt-e1681d8a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0281532b63d3f746e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c9be62dad94d00f0",
            "owner_id": "525759056232",
            "tags": {
              "Name": "eks_test_vpc2"
            },
            "tags_all": {
              "Name": "eks_test_vpc2"
            }
          }
        }
      ]
    }
  ]
}